src/objects/BigMachines__Oracle_User__c.object
<CustomObject>
    <fields>
        <fullName>BigMachines__Access_Type__c</fullName>
        <description>This picklist contains the possible access types that are available to Oracle CPQ Cloud users. If you wish to restrict the values that users may select from this list, it is recommended that you create a validation rule. Modifying this list may break the user integration to Oracle CPQ Cloud.</description>
        <label>Access Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BigMachines__Association_to_Organization__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>FullAccess</fullName>
                </value>
                <value>
                    <fullName>SalesAgent</fullName>
                    <default>true</default>
                    <label>SalesAgent</label>
                </value>
                <value>
                    <fullName>ChannelAgent</fullName>
                </value>
                <value>
                    <fullName>BuyAccess</fullName>
                </value>
                <value>
                    <fullName>RestrictedAccess</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BigMachines__Allow_Quote_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this Salesforce user can create Oracle CPQ Quotes for this Oracle CPQ Site.</inlineHelpText>
        <label>Allow Quote Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Association_to_Organization__c</fullName>
        <description>This picklist contains the possible associations that users can have to the primary organization. If you wish to restrict the values that users may select from this list, it is recommended that you create a validation rule. Modifying this list may break the user integration to Oracle CPQ Cloud.</description>
        <label>Association to Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal User</fullName>
                    <default>true</default>
                    <label>Internal User</label>
                </value>
                <value>
                    <fullName>Partner User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BigMachines__Bulk_Synchronization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Setting this field to True will suspend synchronization between Salesforce and Oracle CPQ Cloud for this user. This is useful when you want to update many users at once (via the Salesforce data loader for example). Instead of sending a separate SOAP call to Oracle CPQ Cloud for each user, Salesforce will send a single SOAP call for all users that have this flag set to True. To update many users at once, download the users using the data loader and then set this field to True for all the users that you want to sync. Be sure to update any other fields you wish on those users and upload the data back. Then go to Oracle CPQ Cloud Site Setup and click the &apos;Bulk Synchronize&apos; button. Users that have the &apos;Synchronize with Oracle CPQ Cloud&apos; flag set to True will be provisioned or updated and those that have it set to False will be de-provisioned.</description>
        <inlineHelpText>If you want to update and synchronize many users at once, you can do so by using the Salesforce Data Loader and the CPQ Cloud Bulk Synchronize feature. Read this field&apos;s description or check the Oracle CPQ Cloud Implementation Guide for more information.</inlineHelpText>
        <label>Suspend Oracle CPQ Cloud Synchronization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Currency_Preference__c</fullName>
        <description>This picklist contains the possible currency preferences that are available to Oracle CPQ Cloud users. You will need to manually update this picklist with the possible options that are available in your Oracle CPQ Cloud instance.</description>
        <label>Currency Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EUR</fullName>
                    <default>true</default>
                    <label>EUR</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BigMachines__Date_Time_Format__c</fullName>
        <description>This picklist contains the possible date/time format options that are available to Oracle CPQ Cloud users. Do not modify this list.</description>
        <label>Date/Time Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>dd/MM/yyyy HH:mm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BigMachines__Delegated_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field allows you to specify a delegated approver in Oracle CPQ Cloud. The delegated approver feature was introduced in Oracle CPQ Cloud 11.1. Therefore, this field should be left blank if you are using an earlier version of Oracle CPQ Cloud.</description>
        <inlineHelpText>If you&apos;d like to have a delegated approver in Oracle CPQ Cloud, select that user here. Please note that the user you select must already be provisioned in Oracle CPQ Cloud.</inlineHelpText>
        <label>Oracle CPQ Cloud Delegated Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Oracle_Approval_Delegator</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BigMachines__Language_Preference__c</fullName>
        <description>This picklist contains the possible language preferences that are available to Oracle CPQ Cloud users. You will need to manually update this picklist with the possible options that are available in your Oracle CPQ Cloud instance.</description>
        <label>Language Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BigMachines__Number_Format__c</fullName>
        <description>This picklist contains the possible number formats that are available to Oracle CPQ Cloud users. Do not modify this list.</description>
        <label>Number Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>####.##</fullName>
                    <default>true</default>
                    <label>####.##</label>
                </value>
                <value>
                    <fullName>####,##</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BigMachines__Oracle_CPQ_Cloud_Login__c</fullName>
        <description>This is the value of the Oracle CPQ Cloud user login. It is derived by looking at the part of the Username field before the &apos;@&apos; symbol and removing all special characters. If the result is fewer than three characters, underscores &apos;_&apos; are added at the end to make it long enough.</description>
        <formula>IF(LEN(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LEFT( BigMachines__Salesforce_User__r.Username, FIND(&quot;@&quot;, BigMachines__Salesforce_User__r.Username)-1),&quot;~&quot;, &quot;&quot;),&quot;`&quot;, &quot;&quot;),&quot;!&quot;, &quot;&quot;),&quot;#&quot;, &quot;&quot;),&quot;$&quot;, &quot;&quot;),&quot;%&quot;, &quot;&quot;),&quot;^&quot;, &quot;&quot;),&quot;&amp;&quot;, &quot;&quot;),&quot;*&quot;, &quot;&quot;),&quot;(&quot;, &quot;&quot;),&quot;)&quot;, &quot;&quot;),&quot;-&quot;, &quot;&quot;),&quot;+&quot;, &quot;&quot;),&quot;=&quot;, &quot;&quot;),&quot;{&quot;, &quot;&quot;),&quot;[&quot;, &quot;&quot;),&quot;}&quot;, &quot;&quot;),&quot;]&quot;, &quot;&quot;),&quot;|&quot;, &quot;&quot;),&quot;&apos;&quot;, &quot;&quot;),&quot;.&quot;, &quot;&quot;),&quot;?&quot;, &quot;&quot;),&quot;/&quot;, &quot;&quot;)) &lt; 3,RPAD(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LEFT(BigMachines__Salesforce_User__r.Username, FIND(&quot;@&quot;, BigMachines__Salesforce_User__r.Username)-1),&quot;~&quot;, &quot;&quot;),&quot;`&quot;, &quot;&quot;),&quot;!&quot;, &quot;&quot;),&quot;#&quot;, &quot;&quot;),&quot;$&quot;, &quot;&quot;),&quot;%&quot;, &quot;&quot;),&quot;^&quot;, &quot;&quot;),&quot;&amp;&quot;, &quot;&quot;),&quot;*&quot;, &quot;&quot;),&quot;(&quot;, &quot;&quot;),&quot;)&quot;, &quot;&quot;),&quot;-&quot;, &quot;&quot;),&quot;+&quot;, &quot;&quot;),&quot;=&quot;, &quot;&quot;),&quot;{&quot;, &quot;&quot;),&quot;[&quot;, &quot;&quot;),&quot;}&quot;, &quot;&quot;),&quot;]&quot;, &quot;&quot;),&quot;|&quot;, &quot;&quot;),&quot;&apos;&quot;, &quot;&quot;),&quot;.&quot;, &quot;&quot;),&quot;?&quot;, &quot;&quot;),&quot;/&quot;, &quot;&quot;),3, &quot;_&quot;),SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LEFT(BigMachines__Salesforce_User__r.Username, FIND(&quot;@&quot;, BigMachines__Salesforce_User__r.Username)-1),&quot;~&quot;, &quot;&quot;),&quot;`&quot;, &quot;&quot;),&quot;!&quot;, &quot;&quot;),&quot;#&quot;, &quot;&quot;),&quot;$&quot;, &quot;&quot;),&quot;%&quot;, &quot;&quot;),&quot;^&quot;, &quot;&quot;),&quot;&amp;&quot;, &quot;&quot;),&quot;*&quot;, &quot;&quot;),&quot;(&quot;, &quot;&quot;),&quot;)&quot;, &quot;&quot;),&quot;-&quot;, &quot;&quot;),&quot;+&quot;, &quot;&quot;),&quot;=&quot;, &quot;&quot;),&quot;{&quot;, &quot;&quot;),&quot;[&quot;, &quot;&quot;),&quot;}&quot;, &quot;&quot;),&quot;]&quot;, &quot;&quot;),&quot;|&quot;, &quot;&quot;),&quot;&apos;&quot;, &quot;&quot;),&quot;.&quot;, &quot;&quot;),&quot;?&quot;, &quot;&quot;),&quot;/&quot;, &quot;&quot;))</formula>
        <label>Oracle CPQ Cloud Login</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigMachines__Oracle_CPQ_Cloud_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oracle CPQ Cloud Site</label>
        <referenceTo>BigMachines__Configuration_Record__c</referenceTo>
        <relationshipLabel>Oracle Users</relationshipLabel>
        <relationshipName>Oracle_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BigMachines__Partner_Organization__c</fullName>
        <description>This field contains the variable name of the partner organization to which this partner user is associated in Oracle CPQ Cloud.</description>
        <formula>IF((Text(BigMachines__Association_to_Organization__c) == &apos;Partner User&apos;), BigMachines__Salesforce_User__r.Contact.Account.BigMachines__Partner_Organization__c, &apos;&apos;)</formula>
        <label>Partner Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigMachines__Provisioned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates that there is a Oracle CPQ Cloud user that has been linked to this Salesforce user.</description>
        <inlineHelpText>Check this box to establish a link between this Salesforce user and Oracle CPQ Cloud. Linked users will not be prompted to enter login credentials when accessing Oracle CPQ Cloud to create and edit quotes.</inlineHelpText>
        <label>Synchronize with Oracle CPQ Cloud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Salesforce_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Oracle_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BigMachines__Time_Zone__c</fullName>
        <description>This picklist contains the possible time zones that are available to Oracle CPQ Cloud users. Do not modify this list.</description>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(GMT-11:00 GMT-11:00) Samoa</fullName>
                </value>
                <value>
                    <fullName>(GMT-10:00 GMT-10:00) Hawaii</fullName>
                </value>
                <value>
                    <fullName>(GMT-10:00 GMT-9:00) Aleutian</fullName>
                </value>
                <value>
                    <fullName>(GMT-9:30 GMT-9:30) Marquesas</fullName>
                </value>
                <value>
                    <fullName>(GMT-9:00 GMT-9:00) Gambier</fullName>
                </value>
                <value>
                    <fullName>(GMT-9:00 GMT-8:00) Alaska</fullName>
                </value>
                <value>
                    <fullName>(GMT-8:00 GMT-8:00) Pitcairn</fullName>
                </value>
                <value>
                    <fullName>(GMT-8:00 GMT-7:00) US Pacific Time</fullName>
                </value>
                <value>
                    <fullName>(GMT-7:00 GMT-7:00) Arizona</fullName>
                </value>
                <value>
                    <fullName>(GMT-7:00 GMT-6:00) Mountain</fullName>
                </value>
                <value>
                    <fullName>(GMT-6:00 GMT-6:00) Saskatchewan</fullName>
                </value>
                <value>
                    <fullName>(GMT-6:00 GMT-5:00) US Central Time</fullName>
                </value>
                <value>
                    <fullName>(GMT-5:00 GMT-5:00) Indianapolis</fullName>
                </value>
                <value>
                    <fullName>(GMT-5:00 GMT-4:00) US Eastern Time</fullName>
                    <default>true</default>
                    <label>(GMT-5:00 GMT-4:00) US Eastern Time</label>
                </value>
                <value>
                    <fullName>(GMT-4:00 GMT-4:00) Puerto Rico</fullName>
                </value>
                <value>
                    <fullName>(GMT-3:00 GMT-4:00) Chile</fullName>
                </value>
                <value>
                    <fullName>(GMT-4:00 GMT-3:00) Canada Atlantic Time</fullName>
                </value>
                <value>
                    <fullName>(GMT-3:00 GMT-3:00) Buenos Aires</fullName>
                </value>
                <value>
                    <fullName>(GMT-3:30 GMT-2:30) Newfoundland</fullName>
                </value>
                <value>
                    <fullName>(GMT-2:00 GMT-3:00) Sao Paulo</fullName>
                </value>
                <value>
                    <fullName>(GMT-2:00 GMT-2:00) Brazil/DeNoronha</fullName>
                </value>
                <value>
                    <fullName>(GMT-1:00 GMT-1:00) Cape Verde</fullName>
                </value>
                <value>
                    <fullName>(GMT-1:00 GMT+0:00) Azores</fullName>
                </value>
                <value>
                    <fullName>(GMT+0:00 GMT+0:00) GMT</fullName>
                </value>
                <value>
                    <fullName>(GMT+0:00 GMT+1:00) London</fullName>
                </value>
                <value>
                    <fullName>(GMT+1:00 GMT+1:00) Algiers</fullName>
                </value>
                <value>
                    <fullName>(GMT+2:00 GMT+1:00) Windhoek</fullName>
                </value>
                <value>
                    <fullName>(GMT+1:00 GMT+2:00) Amsterdam</fullName>
                </value>
                <value>
                    <fullName>(GMT+2:00 GMT+2:00) Tripoli</fullName>
                </value>
                <value>
                    <fullName>(GMT+2:00 GMT+3:00) Israel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BigMachines__Unit_System__c</fullName>
        <description>This picklist contains the possible currency preferences that are available to Oracle CPQ Cloud users. Do not modify this list.</description>
        <label>Unit System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>System Default</fullName>
                    <default>true</default>
                    <label>System Default</label>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Metric</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BigMachines__User_Groups__c</fullName>
        <description>This picklist contains the possible user groups to which Oracle CPQ Cloud users may belong. You will need to manually update this picklist with the possible options that are available in your Oracle CPQ Cloud instance. The values in this list should be the variable name, not the display name, of the Oracle CPQ Cloud user groups.</description>
        <label>User Groups</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>businssAdminstrator</fullName>
                    <label>Auditor de Gestion</label>
                </value>
                <value>
                    <fullName>fieldService</fullName>
                    <default>true</default>
                    <label>Profesional</label>
                </value>
                <value>
                    <fullName>salesUser</fullName>
                    <label>Agente</label>
                </value>
                <value>
                    <fullName>salesUserSupervisor</fullName>
                    <label>Agente Supervisor</label>
                </value>
                <value>
                    <fullName>technicalAdminstrator</fullName>
                    <label>Admin</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Oracle User</label>
    <nameField>
        <label>Oracle User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Oracle Users</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>BigMachines__BigMachines_Partner_Users</fullName>
        <active>true</active>
        <description>In order to link Partner Users, the Salesforce Account must first be linked to a Oracle CPQ Cloud Partner Organization. To do this, enter the variable name of the partner organization in the &quot;Oracle CPQ Cloud Partner Organization&quot; field on the account.</description>
        <errorConditionFormula>AND(ISPICKVAL( BigMachines__Association_to_Organization__c , &quot;Partner User&quot;), LEN( BigMachines__Salesforce_User__r.Contact.Account.BigMachines__Partner_Organization__c  ) = 0)</errorConditionFormula>
        <errorDisplayField>BigMachines__Association_to_Organization__c</errorDisplayField>
        <errorMessage>In order to link to a Oracle CPQ Cloud Partner User, this Salesforce User must be tied to an Account that is mapped to a Partner Organization in Oracle CPQ Cloud. Please consult with your System administrator for further details.</errorMessage>
    </validationRules>
</CustomObject>